--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ font-weight: 500;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.8);
   visibility: hidden;
   opacity: 0;
   transition: .3s all ease-in-out;
@@ -535,7 +535,7 @@ font-weight: 500;
   left:0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.48);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index:99;
 }
 
@@ -558,4 +558,39 @@ font-weight: 500;
 }
 .profilepic{
   width: 600px;
+}
+
+.but1n{
+  position: absolute;
+  left:585px;
+}
+.but1p{
+  position: absolute;
+  left:-80px;
+}
+
+.but2n{
+  position: absolute;
+  left:855px;
+}
+.but2p{
+  position: absolute;
+  left:-90px;
+}
+.but3n{
+  position: absolute;
+  left:857px;
+}
+.but3p{
+  position: absolute;
+  left:-90px;
+}
+
+.but4n{
+  position: absolute;
+  left:860px;
+}
+.but4p{
+  position: absolute;
+  left:-95px;
 }
