--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,7 +340,7 @@ font-weight: 500;
 }
 .navbar-nav{
   margin-top: 2%;
-    width: 250px;
+    width: 332px;
 }
 .pic{
   font-size: 11pt;
@@ -594,3 +594,211 @@ font-weight: 500;
   position: absolute;
   left:-95px;
 }
+
+#LI_9 {
+    block-size: 50px;
+    border-block-end-color: rgb(104, 107, 112);
+    border-block-start-color: rgb(104, 107, 112);
+    border-inline-end-color: rgb(104, 107, 112);
+    border-inline-start-color: rgb(104, 107, 112);
+    bottom: 0px;
+    box-sizing: border-box;
+    caret-color: rgb(104, 107, 112);
+    color: rgb(104, 107, 112);
+    column-rule-color: rgb(104, 107, 112);
+    display: block;
+    float: left;
+    height: 50px;
+    inline-size: 41px;
+    inset-block-end: 0px;
+    inset-block-start: 0px;
+    inset-inline-end: 0px;
+    inset-inline-start: 0px;
+    left: 0px;
+    margin-inline-start: 30px;
+    perspective-origin: 20.5px 25px;
+    position: relative;
+    right: 0px;
+    text-decoration: none solid rgb(104, 107, 112);
+    text-size-adjust: 100%;
+    top: 0px;
+    transform-origin: 20.5px 25px;
+    width: 41px;
+    border: 0px none rgb(104, 107, 112);
+    font: 15px / 27.1285px "Source Sans Pro", sans-serif;
+    list-style: outside none none;
+    margin: 0px 10px 0px 00px;
+    outline: rgb(104, 107, 112) none 0px;
+}/*#LI_9*/
+
+#A_1 {
+    block-size: 35px;
+    border-block-end-color: rgb(119, 119, 119);
+    border-block-start-color: rgb(119, 119, 119);
+    border-end-end-radius: 100px;
+    border-end-start-radius: 100px;
+    border-inline-end-color: rgb(119, 119, 119);
+    border-inline-start-color: rgb(119, 119, 119);
+    border-start-end-radius: 100px;
+    border-start-start-radius: 100px;
+    bottom: 0px;
+    box-sizing: border-box;
+    caret-color: rgb(119, 119, 119);
+    color: rgb(119, 119, 119);
+    column-rule-color: rgb(119, 119, 119);
+    display: inline-block;
+    height: 35px;
+    inline-size: 35px;
+    inset-block-end: 0px;
+    inset-block-start: 0px;
+    inset-inline-end: 0px;
+    inset-inline-start: 0px;
+    left: 0px;
+    margin-block-start: 7px;
+    margin-inline-end: 3px;
+    margin-inline-start: 3px;
+    perspective-origin: 17.5px 17.5px;
+    position: relative;
+    right: 0px;
+    text-align: center;
+    text-decoration: none solid rgb(119, 119, 119);
+    text-size-adjust: 100%;
+    top: -4px;
+    transform-origin: 17.5px 17.5px;
+    width: 35px;
+    background: rgb(243, 243, 243) none repeat scroll 0% 0% / auto padding-box border-box;
+    border: 0px none rgb(119, 119, 119);
+    border-radius: 100px;
+    font: 600 15px / 35px "Source Sans Pro", sans-serif;
+    list-style: outside none none;
+    margin: 7px 3px 0px;
+    outline: rgb(119, 119, 119) none 0px;
+    transition: all 0.3s ease-in-out 0s;
+}/*#A_1*/
+
+#A_1:after {
+    block-size: 2px;
+    border-block-end-color: rgb(119, 119, 119);
+    border-block-start-color: rgb(119, 119, 119);
+    border-inline-end-color: rgb(119, 119, 119);
+    border-inline-start-color: rgb(119, 119, 119);
+    box-sizing: border-box;
+    caret-color: rgb(119, 119, 119);
+    color: rgb(119, 119, 119);
+    column-rule-color: rgb(119, 119, 119);
+    content: '""';
+    display: none;
+    height: 2px;
+    inline-size: 100%;
+    inset-block-start: 8px;
+    inset-inline-end: 0px;
+    inset-inline-start: 0px;
+    left: 0px;
+    position: absolute;
+    right: 0px;
+    text-align: center;
+    text-decoration: none solid rgb(119, 119, 119);
+    text-size-adjust: 100%;
+    top: 8px;
+    visibility: hidden;
+    width: 100%;
+    background: rgb(189, 176, 153) none repeat scroll 0% 0% / auto padding-box border-box;
+    border: 0px none rgb(119, 119, 119);
+    font: 600 15px / 35px "Source Sans Pro", sans-serif;
+    list-style: outside none none;
+    outline: rgb(119, 119, 119) none 0px;
+    transition: all 0.3s ease-in-out 0s;
+}/*#A_1:after*/
+
+#A_1:before {
+    block-size: 2px;
+    border-block-end-color: rgb(119, 119, 119);
+    border-block-start-color: rgb(119, 119, 119);
+    border-inline-end-color: rgb(119, 119, 119);
+    border-inline-start-color: rgb(119, 119, 119);
+    bottom: 8px;
+    box-sizing: border-box;
+    caret-color: rgb(119, 119, 119);
+    color: rgb(119, 119, 119);
+    column-rule-color: rgb(119, 119, 119);
+    content: '""';
+    display: none;
+    height: 2px;
+    inline-size: 100%;
+    inset-block-end: 8px;
+    inset-inline-end: 0px;
+    inset-inline-start: 0px;
+    left: 0px;
+    position: absolute;
+    right: 0px;
+    text-align: center;
+    text-decoration: none solid rgb(119, 119, 119);
+    text-size-adjust: 100%;
+    visibility: hidden;
+    width: 100%;
+    background: rgb(189, 176, 153) none repeat scroll 0% 0% / auto padding-box border-box;
+    border: 0px none rgb(119, 119, 119);
+    font: 600 15px / 35px "Source Sans Pro", sans-serif;
+    list-style: outside none none;
+    outline: rgb(119, 119, 119) none 0px;
+    transition: all 0.3s ease-in-out 0s;
+}/*#A_1:before*/
+
+#I_2 {
+    border-block-end-color: rgb(119, 119, 119);
+    border-block-start-color: rgb(119, 119, 119);
+    border-inline-end-color: rgb(119, 119, 119);
+    border-inline-start-color: rgb(119, 119, 119);
+    box-sizing: border-box;
+    caret-color: rgb(119, 119, 119);
+    color: rgb(119, 119, 119);
+    column-rule-color: rgb(119, 119, 119);
+    cursor: pointer;
+    perspective-origin: 0px 0px;
+    text-align: center;
+    text-decoration: none solid rgb(119, 119, 119);
+    text-size-adjust: 100%;
+    transform-origin: 0px 0px;
+    border: 0px none rgb(119, 119, 119);
+    font: italic 600 15px / 35px "Source Sans Pro", sans-serif;
+    list-style: outside none none;
+    outline: rgb(119, 119, 119) none 0px;
+}/*#I_2*/
+
+#I_2:after {
+    border-block-end-color: rgb(119, 119, 119);
+    border-block-start-color: rgb(119, 119, 119);
+    border-inline-end-color: rgb(119, 119, 119);
+    border-inline-start-color: rgb(119, 119, 119);
+    box-sizing: border-box;
+    caret-color: rgb(119, 119, 119);
+    color: rgb(119, 119, 119);
+    column-rule-color: rgb(119, 119, 119);
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none solid rgb(119, 119, 119);
+    text-size-adjust: 100%;
+    border: 0px none rgb(119, 119, 119);
+    font: italic 600 15px / 35px "Source Sans Pro", sans-serif;
+    list-style: outside none none;
+    outline: rgb(119, 119, 119) none 0px;
+}/*#I_2:after*/
+
+#I_2:before {
+    border-block-end-color: rgb(119, 119, 119);
+    border-block-start-color: rgb(119, 119, 119);
+    border-inline-end-color: rgb(119, 119, 119);
+    border-inline-start-color: rgb(119, 119, 119);
+    box-sizing: border-box;
+    caret-color: rgb(119, 119, 119);
+    color: rgb(119, 119, 119);
+    column-rule-color: rgb(119, 119, 119);
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none solid rgb(119, 119, 119);
+    text-size-adjust: 100%;
+    border: 0px none rgb(119, 119, 119);
+    font: italic 600 15px / 35px "Source Sans Pro", sans-serif;
+    list-style: outside none none;
+    outline: rgb(119, 119, 119) none 0px;
+}/*#I_2:before*/
